--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="container">
        
-            <div class="button" id="blue">1</div>
-            <div class="button"id="green">2</div>
-            <div class="button"id="yellow">2</div>
-            <div class="button"id="red">3</div>
-            <div class="button"id="grey">4</div>
+            <div class="button" id="blue"></div>
+            <div class="button"id="green"></div>
+            <div class="button"id="yellow"></div>
+            <div class="button"id="red"></div>
+            <div class="button"id="grey"></div>
        
     </div>
     <script src="script.js"></script>
